--- a/result.tex
+++ b/result.tex
@@ -1022,14 +1022,14 @@ A sufficiently high permittivity can be found in the microwave and terahertz ran
 \end{figure}
 %}}}
 \paragraph{Low-frequency behaviour of a thin sheet}%{{{
-When discussing the electromagnetic behaviour of metallic wires parallel to the electric field, we mentioned that wires with opposite orientation -- parallel to the magnetic field -- do not appreciably interact with the wave. The situation changes when the wires are widened into stripes, with their dimension along the $x$-axis not much smaller than their periodicity $a_x$. They may be then equivalently described as a thin metallic sheet divided by slits that have uniform width $d_x$ and are oriented parallel to the magnetic field.
+When discussing the electromagnetic behaviour of metallic wires parallel to the electric field, we mentioned that wires with opposite orientation -- parallel to the magnetic field -- do not appreciably interact with the wave. The situation changes if the wires are widened into stripes, with their transverse dimension, parallel to the electric field, not much smaller than their periodicity $a_x$. They may be then equivalently described as a thin metallic sheet divided by slits that have uniform width $d_x$ and are oriented parallel to the magnetic field.
 
-When the wavelength is significantly longer than the slit distance, a single sheet partially reflects the incident radiation (Fig. \ref{fg_yslit_xcomparison_d20}). The reflection amplitude $|r|$ monotonously decreases with the slit width $d_x$. 
-It vanishes in the low-frequency limit for any $d_x>0$, since the macroscopic structure is not conductive in the direction of the electric field. 
+When the wavelength is significantly longer than the slit distance, a single sheet partially reflects the incident radiation (Fig. \ref{fg_yslit_xcomparison_d20}). The reflectance amplitude $|r|$ monotonously decreases with the slit width $d_x$. 
+It also vanishes in the low-frequency limit for any $d_x>0$, since the macroscopic structure is not conductive in the direction of the electric field. 
 
-The low-pass filtering capability of this structure is illustrated in more detail by the continuous scan through $d_x$ in Fig. \ref{fg_yslit_xscan}a. 
+The low-pass filtering capability of this structure is illustrated in more detail in the continuous scan through $d_x$ in Fig. \ref{fg_yslit_xscan}a. 
 The unit cell size in the $x$-direction for both presented figures was $a_x = 100$ $\upmu$m. 
-The upper frequency limit in the plots was determined by the onset of the first diffraction order as $c/a_x = 3.0$ THz. 
+The upper frequency limit in the plots was determined by the onset of the first diffraction order, at $c/a_x = 3.0$ THz. 
 
 %}}}
 \begin{figure}[htb] %{{{ fg_yslit_xscan 
@@ -1041,7 +1041,7 @@ The upper frequency limit in the plots was determined by the onset of the first 
 \end{figure}
 %}}}
 \paragraph{Wood's anomaly near the diffraction edge} %{{{
-At a frequency slightly below the onset of diffraction, a relatively narrow notch in the reflectance spectrum is observed. The frequency where $|r|$ drops near zero depends on the slab thickness $d_z$ -- which will be shown later -- and on the slit width $d_x$. In the above figures where $d_z$ was fixed at $20$ $\upmu$m, the lowest frequency of the notch around $2.8$ THz is reached for $d_x/a_x \sim 0.3$ (see Fig. \ref{fg_yslit_xscan}a). 
+At a frequency slightly below the onset of diffraction, a relatively narrow notch in the reflectance spectrum is observed, corresponding to an individual resonance. The frequency where $|r|$ drops near zero depends on  the slit width $d_x$, and on the slab thickness $d_z$ as discussed later. In the above figures where $d_z$ was fixed at $20$ $\upmu$m, the lowest frequency of the notch around $2.8$ THz is reached for $d_x/a_x \sim 0.3$ (see Fig. \ref{fg_yslit_xscan}a). 
 
 For a narrower or wider slit, the frequency of the notch increases and eventually approaches the diffraction limit of $3.0$ THz. 
 The notch also becomes narrower in spectrum, but does not appreciably reduce its depth. Some frequency can always be found at which nearly 100 \% of the energy is transmitted through the structure.
