--- a/theory.tex
+++ b/theory.tex
@@ -480,7 +480,7 @@ which allows to simplify Eq. (\ref{eq_chi_convol_nonloc}) so that in local media
 
 %}}}
 \paragraph{Magnetic effects can be described by nonlocal permittivity} %{{{
-Here, we will follow the approach of Landau and Lifshitz (see Refs. \cite{landau1984electrodynamics, krowne2007book_agran, agranovich2006spatial} and \cite[p. 19]{fietz2011homogenization}) to show that the magnetic response of any medium can be fully expressed by a certain form of permittivity dependence on $\kk$. This leads to introducing new \textit{Landau-Lifshitz}\index{permittivity!Landau-Lifshitz form} permittivity $\epsLL$ and permeability $\muLL$, which are, in general, different from those used in the more customary symmetric model:
+Here, we will follow the approach of Landau and Lifshitz \cite{landau1984electrodynamics} to show that the magnetic response of any medium can be fully expressed by a certain form of permittivity dependence on $\kk$. (For more details, see Refs. \cite{agranovich2006spatial}, \cite[pp. 95-130]{krowne2007book}  and \cite[p. 19]{fietz2011homogenization}.) This leads to introducing new \textit{Landau-Lifshitz}\index{permittivity!Landau-Lifshitz form} permittivity $\epsLL$ and permeability $\muLL$, which are, in general, different from those used in the more customary symmetric model:
 $$\epsLL(\omega, \kk) \not\equiv \epsrn(\omega, \kk),\quad\quad\quad 1 = \muLL(\omega, \kk) \not\equiv \murn(\omega, \kk).$$
 The Maxwell equations (\ref{eq_me1}-\ref{eq_me4}) however still hold when these new parameters are substituted for the original ones. Requiring the relative permeability to be unity implies a trivial dependence of the magnetic field on the magnetic induction in this model:
 $$ \mu_0 \HHsd = \B. $$
